# Physical-AI-Textbook

./: .gitignore  CLAUDE.md
.claude/agents/: book-content-writer.md  code-generator.md  content-chunker.md  diagram-generator.md  rag-optimizer.md  troubleshooting-writer.md
.specify/memory/: constitution.md
backend/: README.md  main.py  pyproject.toml  test_chat_agent.py
backend/src/api/: chat_agent.py  rag.py  router.py
backend/src/config/: database.py
backend/src/rag/: chunking.py  config.py  embeddings.py  loader.py  models.py  qdrant.py  schemas.py  service.py
backend/tests/contract/: test_rag_contracts.py
backend/tests/integration/: test_health_integration.py  test_rag_integration.py
backend/tests/unit/: test_embeddings.py  test_health.py
book-source/: docusaurus.config.ts  package-lock.json  package.json
book-source/docs/: intro.md
book-source/docs/MODULE-1-ROS2/: COMMUNICATION-MODEL.md  HUMANOID-URDF-DESIGN.md  PYTHON-CONTROL-AGENTS.md  ROS2-ARCHITECTURE.md
history/adr/: 001-textbook-structure-and-technology-stack.md
specs/001-chat-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-robotics-book-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-chatbot-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+78 files in other folders)
